force-app/main/default/objects/Insurance_Policy__c/fields/Coverage__c.field-meta.xml
<CustomField>
    <fullName>Coverage__c</fullName>
    <label>Coverage</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>