force-app/main/default/objects/Insurance_Policy__c/fields/Exclusions__c.field-meta.xml
<CustomField>
    <fullName>Exclusions__c</fullName>
    <label>Exclusions</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>