force-app/main/default/objects/Insurance_Policy__c/fields/Full_Policy_Detail__c.field-meta.xml
<CustomField>
    <fullName>Full_Policy_Detail__c</fullName>
    <label>Full Policy Detail</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>