force-app/main/default/objects/Insurance_Policy__c/fields/IsDeleted__c.field-meta.xml
<CustomField>
    <fullName>IsDeleted__c</fullName>
    <label>Is Deleted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>