force-app/main/default/objects/Insurance_Policy__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>IsDeleted__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>